karavan-app/src/main/resources/templates/kubernetes/ingress.jkube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karavan-example-ingress
spec:
  tls:
    - hosts:
        - https-example.foo.com
      secretName: karavan-secret-tls
  rules:
    - host: https-example.foo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
